solve some bugs in handlers

--- a/ITI.RMS.Presentation.Layer/appsettings.json
+++ b/ITI.RMS.Presentation.Layer/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnention": "Data Source=.;Initial Catalog=ITI_RMS;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
+    "DefaultConnection": "Data Source=.;Initial Catalog=ITI_RMS;Integrated Security=True;TrustServerCertificate=True;MultipleActiveResultSets=True"
   }
 }
